maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:18: error: type mismatch;
 found   : Unit
 required: Int
  for (abscisse <- 0 to L-1){
                ^